<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shelf</string>
    <string name="user_name">user name</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="confirm_password">confirm password</string>
    <string name="todo">TODO</string>
    <string name="textEmailAddress">Email</string>
    <string name="textPassword">PassWord</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? sing up</string>
    <string name="image">Image</string>
    <string name="software_engineering_a_practitioners_approach"> software engineering a  practitioner s approach</string>
    <string name="my_bookmarks">My BookMarks</string>
    <string name="go_to_search">Go to Search</string>
    <string name="my_information">my information</string>
    <string name="search">search</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="software_engineering_a_practitioner_s_approach">software_engineering_a_practitioner_s_approach</string>
    <string name="title_activity_view310">view310</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user__name">User _ Name</string>
    <string name="ChangeEmail">Email</string>
    <string name="major">Major</string>
    <string name="level">Level</string>
    <string name="log_out">LOG OUT</string>
    <string name="save_changes">save changes</string>
    <string name="change_password">change password</string>
    <string name="hsearch">Button</string>
    <string name="hsearchh">TextView</string>
    <string name="sign_up">sign up</string>
    <string name="enteridhere">EnterIdhere</string>
    <string name="password_here">password</string>
    <string name="course_id_only">Course ID Only</string>
    <string name="go">Go</string>
    <string name="pic">Pic</string>
    <!--    <string name="todo" translatable="false">TODO</string>-->

</resources>
